--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,28 +2,33 @@
 
     <section id="content-details" class="row clearfix">
         <article id="details-article" class="col-sm-8">
-            <h1 id="article-title">Growth Hacking <span class="font-weight-light">Crash Course</span></h1>
-            <h3><small>By <a href="#" data-toggle="modal" data-target="#author-modal">Mattan Griffel</a></small></h3>
+            <h1 id="article-title">One, Shoe, Tree<span class="font-weight-light"></span></h1>
 
-            <p>A growth hacker is a rare combination: someone with the right marketing and technical skills who can come up with clever marketing hacks and also track their results.</p>
+            <p>You lose a shoe. Your feet are different sizes. You're looking for some left and right variety, or half of you wants to go barefoot.</p>
 
-            <p>In this talk, Mattan Griffel introduces you to the concept of Growth Hacking and shares his favorite tips for getting started as a growth hacker.</p>
-            <p><strong>What You'll Learn</strong></p>
-            <ul class="no-indent">
-                <li>What is a growth hacker?</li>
-                <li>The 5 stages of the user lifecycle</li>
-                <li>How to apply the Lean Marketing Framework</li>
-                <li>Resources and tools you'll need to know</li>
-            </ul>
+            <p>Shoes might be complementary goods, but they can stand alone. Branch out. Find your one shoe.</p>
+
         </article>
         <aside id="details-aside" class="col-sm-4">
             <a id="btn-buy" href="receipt.html" class="btn btn-success btn-lg btn-block"><span class="glyphicon glyphicon-ok"></span>I want this!</a>
+
+              <%= form_tag charges_path do %>
+                <article>
+                  <label class="amount">
+                    <span>Amount: $15.00</span>
+                  </label>
+                </article>
+
+                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                        data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+                        data-description="Easy as one, shoe, tree"
+                        data-amount="1500"></script>
+              <% end %>
+
+
             <ul id="details-infobox" class="list-group">
               <li class="list-group-item active clearfix">DETAILS</li>
-              <li class="list-group-item">You'll get one video</li>
-              <li class="list-group-item clearfix">
-                <span class="pull-left content-qualifier">Length</span>
-                <span class="pull-right">30 minutes</span>
+              <li class="list-group-item">You'll get one shoe.</li>
               </li>
             </ul>
         </aside>
